[package]
name = "runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.substrate-session]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-session'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-transaction-payment'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.sr-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-api'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.offchain-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.block-builder-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-block-builder-runtime-api'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.tx-pool-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool-runtime-api'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.inherents]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'd2c4b0dbd89d9588adcbe97320e27f49ee251411'

[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.4'

[features]
default = ["std"]
std = [
	"codec/std",
	"sr-api/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"aura/std",
	"aura-primitives/std",
	"grandpa/std",
	"executive/std",
	"indices/std",
	"primitives/std",
	"sr-primitives/std",
	"randomness-collective-flip/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"transaction-payment/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"block-builder-api/std",
	"tx-pool-api/std",
	"inherents/std",
]
